trying to get language

--- a/src/app/state-selector/state-selector.component.html
+++ b/src/app/state-selector/state-selector.component.html
@@ -1,4 +1,4 @@
-<label for="states">Choose a state:</label>
+<label for="states">Choose a state, please:</label>
 
 <select name="states" id="states">
     <option *ngFor="let state of states" value='state.fips'>{{state.name}}</option>
