selector communicates with detail

--- a/src/app/state-detail/state-detail.component.html
+++ b/src/app/state-detail/state-detail.component.html
@@ -1,2 +1,2 @@
-<h2>{{ state.name }} </h2>
-<div><span>Population: {{ state.pop }}</span></div>
+<h2>{{ stateSelected.name }} </h2>
+<div><span>Population: {{ stateSelected.pop }}</span></div>
