--- a/src/app/state-stat-selector/state-stat-selector.component.html
+++ b/src/app/state-stat-selector/state-stat-selector.component.html
@@ -1,4 +1,2 @@
-<input [(ngModel)]="activated"
-(ngModelChange)='onToggle()'
-type="checkbox" id='index' name="sausage" value="sos">
+<input type="checkbox" id='index' name="sausage" value="sos">
 <label for="check1">{{ property }}: {{ activated }}</label>
