--- a/src/app/state-selector/state-selector.component.html
+++ b/src/app/state-selector/state-selector.component.html
@@ -9,5 +9,30 @@
 </div> 
 <!-- you need to either make this an *ngIf or declare a default
 value inside of the component or else this won't work -->
-<app-state-stat-selector-list></app-state-stat-selector-list>
-<app-state-detail *ngIf="stateSelected" [stateSelected] = 'stateSelected'></app-state-detail>
+<!-- let's try this <app-state-stat-selector-list></app-state-stat-selector-list> -->
+
+<form #simpleForm="ngForm" (ngSubmit)="getValues(simpleForm.value)">
+    <input type="checkbox" id="population" ngModel name="population">
+    <label for="population">Population</label>
+    <br>
+    <input type="checkbox" id="births" ngModel name="births">
+    <label for="births">Births</label>
+    <br>
+    <input type="checkbox" id="deaths" ngModel name="deaths">
+    <label for="deaths">Deaths</label>
+    <br>
+    <input type="checkbox" id="dom" ngModel name="dom">
+    <label for="dom">Net Domestic Migrations</label>
+    <br>
+    <input type="checkbox" id="nim" ngModel name="nim">
+    <label for="nim">Net Internal Migration</label>
+    <br>
+    <button>Update</button>
+</form>
+
+
+<app-state-detail *ngIf="stateSelected"
+ [stateSelected] = 'stateSelected'
+ [population] = 'population' 
+ [births] = 'births'
+ ></app-state-detail>
