--- a/src/app/state-stat-selector-list/state-stat-selector-list.component.html
+++ b/src/app/state-stat-selector-list/state-stat-selector-list.component.html
@@ -1,17 +1,17 @@
 <form #simpleForm="ngForm" (ngSubmit)="getValues(simpleForm.value)">
-    <input type="checkbox" id="population" ngModel name="population">
+    <input class="form-check-input" type="checkbox" id="population" ngModel name="population">
     <label for="population">Population</label>
     <br>
-    <input type="checkbox" id="births" ngModel name="births">
+    <input class="form-check-input"type="checkbox" id="births" ngModel name="births">
     <label for="births">Births</label>
     <br>
-    <input type="checkbox" id="deaths" ngModel name="deaths">
+    <input class="form-check-input" type="checkbox" id="deaths" ngModel name="deaths">
     <label for="deaths">Deaths</label>
     <br>
-    <input type="checkbox" id="dom" ngModel name="dom">
+    <input class="form-check-input" type="checkbox" id="dom" ngModel name="dom">
     <label for="dom">Net Domestic Migrations</label>
     <br>
-    <input type="checkbox" id="nim" ngModel name="nim">
+    <input class="form-check-input" type="checkbox" id="nim" ngModel name="nim">
     <label for="nim">Net Internal Migration</label>
     <br>
     <button>Update</button>
